fix(Navbar): expand clickable area (nav links on mobile)

--- a/src/index.css
+++ b/src/index.css
@@ -92,14 +92,10 @@ body {
   }
   
   @media (max-width: 639px) {
+    display: block;
     width: 100%;
-    padding-left: 1.25rem;
+    padding-left: 1.25rem; 
     padding-right: 1.25rem;
-    border-radius: 0.375rem;
-    
-    &:hover {
-      background-color: #3A3A49;
-    }
   }
 }
 
